# concraft-pl

./: .gitignore  LICENSE  README.md  changelog  concraft-pl.cabal  stack.yaml
bindings/python/: README.md  concraft.py  concraft_pl2.py  test.py
config/: nkjp-tagset.cfg
eval/: cv.sh
example/: config.dhall  tagset.cfg  test.dag  train.dag
example/10cols_backup/: train.dag
notes/: binary.txt  notes.txt  plan.txt
src/NLP/Concraft/: Polish.hs
src/NLP/Concraft/Polish/: DAG.hs  DAG2.hs  DAGSeg.hs  Maca.hs  Morphosyntax.hs  Request.hs  Server.hs
src/NLP/Concraft/Polish/DAG/: Config.hs  Morphosyntax.hs  Server.hs
src/NLP/Concraft/Polish/DAG/Config/: Disamb.hs  Guess.hs
src/NLP/Concraft/Polish/DAG/Format/: Base.hs
src/NLP/Concraft/Polish/Format/: DAG.hs  Plain.hs
src/NLP/Concraft/Polish/Morphosyntax/: DAG.hs
tools/: concraft-dag-pl.hs  concraft-dag2-pl.hs  concraft-pl.hs
