name:               concraft-pl
version:            0.9.0
synopsis:           Morphological tagger for Polish
description:
    A morphological tagger for Polish based on the concraft library.
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.10
copyright:          Copyright (c) 2013 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           http://zil.ipipan.waw.pl/Concraft
build-type:         Simple

extra-source-files: changelog

data-files: config/nkjp-tagset.cfg

library
    hs-source-dirs: src

    build-depends:
        base >= 4 && < 5
      , concraft                >= 0.11     && < 0.12
      , pedestrian-dag          >= 0.2      && < 0.3
      , crf-chain1-constrained  >= 0.4      && < 0.5
      , crf-chain2-tiers        >= 0.3      && < 0.4
      , tagset-positional       >= 0.3      && < 0.4
      , sgd                     >= 0.4      && < 0.5
      , containers              >= 0.4      && < 0.6
      , bytestring              >= 0.9      && < 0.11
      , text                    >= 0.11     && < 1.3
      , aeson                   >= 0.6      && < 1.1
      , binary                  >= 0.5      && < 0.9
      , process                 >= 1.1      && < 1.5
      , mtl                     >= 2.0      && < 2.3
      , transformers            >= 0.2      && < 0.6
      , network                 >= 2.3      && < 2.7
      , lazy-io                 >= 0.1      && < 0.2
      , split                   >= 0.2      && < 0.3
      , scotty                  >= 0.11     && < 0.12
      , http-types              >= 0.9      && < 0.10
      , wreq                    >= 0.5      && < 0.6
      , lens                    >= 4.15     && < 4.16

    exposed-modules:
        NLP.Concraft.Polish
      , NLP.Concraft.Polish.Maca
      , NLP.Concraft.Polish.Morphosyntax
      , NLP.Concraft.Polish.Request
      , NLP.Concraft.Polish.Server

      -- , NLP.Concraft.Polish.DAG
      -- , NLP.Concraft.Polish.DAG2
      , NLP.Concraft.Polish.DAGSeg
      , NLP.Concraft.Polish.DAG.Morphosyntax
      , NLP.Concraft.Polish.DAG.Format.Base
      , NLP.Concraft.Polish.DAG.Server

    other-modules:
        NLP.Concraft.Polish.Format.Plain

    ghc-options: -Wall -O2

source-repository head
    type: git
    location: https://github.com/kawu/concraft-pl.git

-- executable concraft-pl
--     build-depends:
--         cmdargs                 >= 0.10     && < 0.11
--     hs-source-dirs: src, tools
--     main-is: concraft-pl.hs
--     ghc-options: -Wall -O2 -threaded -rtsopts

-- executable concraft-dag-pl
--     build-depends:
--         cmdargs                 >= 0.10     && < 0.11
--     hs-source-dirs: src, tools
--     main-is: concraft-dag-pl.hs
--     ghc-options: -Wall -O2 -threaded -rtsopts

executable concraft-dag2-pl
    build-depends:
        concraft-pl
      , concraft
      , tagset-positional
      , text
      , bytestring
      , sgd
      , pedestrian-dag
      , crf-chain1-constrained
      , containers
      , base                    >= 4        && < 5
      , cmdargs                 >= 0.10     && < 0.11
    hs-source-dirs: tools
    main-is: concraft-dag2-pl.hs
    ghc-options: -Wall -O2 -threaded -rtsopts
